--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 02:59:00 PM</p>
+    <p class="lastupdate">09/20/2020 03:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">90.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">90.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">90.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.3&#176;F</td>
+        <td class="data">51.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.814 inHg (-0.070)</td>
+        <td class="data">29.809 inHg (-0.077)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph SE (135&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.9&#176;F</td>
+        <td class="data">84.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:45:01 AM">
             29.913</span><br/>
-          <span title="02:56:01 PM">
-            29.813</span>
+          <span title="03:03:01 PM">
+            29.809</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:45:01 AM (Sunday)">
             29.913</span><br/>
-          <span title="02:56:01 PM (Sunday)">
-            29.813</span>
+          <span title="03:03:01 PM (Sunday)">
+            29.809</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          6
+          7
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          6
+          7
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 7 hours, 12 minutes</td>
+      <td class="data">0 days, 7 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 7 hours, 12 minutes</td>
+      <td class="data">0 days, 7 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
