--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 03:19:00 PM</p>
+    <p class="lastupdate">09/20/2020 03:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.6&#176;F</td>
+        <td class="data">91.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.6&#176;F</td>
+        <td class="data">91.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.6&#176;F</td>
+        <td class="data">91.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.8&#176;F</td>
+        <td class="data">52.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.806 inHg (-0.070)</td>
+        <td class="data">29.810 inHg (-0.064)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ESE (112&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
     </tbody>
   </table>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          8
+          9
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          8
+          9
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:18:01 PM">
-            87.6</span><br/>
+          <span title="03:21:01 PM">
+            88.0</span><br/>
           <span title="08:10:00 AM">
             73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:18:01 PM (Sunday)">
-            87.6</span><br/>
+          <span title="03:21:01 PM (Sunday)">
+            88.0</span><br/>
           <span title="08:10:00 AM (Sunday)">
             73.5</span>
         </td>
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="02:26:00 AM">
             45</span><br/>
-          <span title="03:17:01 PM">
-            34</span>
+          <span title="03:20:01 PM">
+            33</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:26:00 AM (Sunday)">
             45</span><br/>
-          <span title="03:17:01 PM (Sunday)">
-            34</span>
+          <span title="03:20:01 PM (Sunday)">
+            33</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 7 hours, 32 minutes</td>
+      <td class="data">0 days, 7 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 7 hours, 32 minutes</td>
+      <td class="data">0 days, 7 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
