--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 04:24:00 PM</p>
+    <p class="lastupdate">09/20/2020 04:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.1&#176;F</td>
+        <td class="data">90.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.1&#176;F</td>
+        <td class="data">90.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.1&#176;F</td>
+        <td class="data">90.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.6&#176;F</td>
+        <td class="data">53.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">28%</td>
+        <td class="data">29%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.797 inHg (-0.056)</td>
+        <td class="data">29.800 inHg (-0.050)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">98.2&#176;F</td>
+        <td class="data">99.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">26%</td>
+        <td class="data">25%</td>
       </tr>
     </tbody>
   </table>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:23:01 PM">
-            98.2</span><br/>
+          <span title="04:28:01 PM">
+            99.2</span><br/>
           <span title="08:10:00 AM">
             73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:23:01 PM (Sunday)">
-            98.2</span><br/>
+          <span title="04:28:01 PM (Sunday)">
+            99.2</span><br/>
           <span title="08:10:00 AM (Sunday)">
             73.5</span>
         </td>
@@ -507,20 +507,20 @@
         <td class="data new_row hilo_day">
           <span title="02:26:00 AM">
             45</span><br/>
-          <span title="04:23:01 PM">
-            26</span>
+          <span title="04:27:01 PM">
+            25</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:26:00 AM (Sunday)">
             45</span><br/>
-          <span title="04:23:01 PM (Sunday)">
-            26</span>
+          <span title="04:27:01 PM (Sunday)">
+            25</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
             63</span><br/>
-          <span title="09/16/2020 05:44:02 PM">
-            26</span>
+          <span title="09/20/2020 04:27:01 PM">
+            25</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/13/2020 05:22:58 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 8 hours, 37 minutes</td>
+      <td class="data">0 days, 8 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 8 hours, 37 minutes</td>
+      <td class="data">0 days, 8 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
